--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
+# VS Code settings
+.vscode/
+
+# Python cache
 _pycache_/
-.ipynb_checkpoints/
-*.xlsx
-*.xls
-*.env
-venv/
 *.pyc
+*.pyo
+*.pyd
+
+# Jupyter notebook checkpoints
+.ipynb_checkpoints/
+
+# Environment folders
+env/
+venv/
+.venv/
+
+# OS files
+.DS_Store
+Thumbs.db
